# ce-ui

./: .gitignore  CHANGELOG.md  conftest.py  openapi.config.ts  package-lock.json  package.json  pyproject.toml  pytest.ini  setup.cfg  tsconfig.json  vitest.config.ts  webpack.config.js
.github/workflows/: js-test.yml  test.yml
ce_ui/: __init__.py  apps.py  asgi.py  breadcrumb.py  context_processors.py  serializers.py  signals.py  urls.py  utils.py  version.py  views.py  wsgi.py
ce_ui/settings/: base.py  production.py  test.py
ce_ui/templates/: 403.html  403_csrf.html  404.html  500.html  app.html  base.html  footer_only.html  noapp.html  topnav_breadcrumbs_and_footer.html
ce_ui/tests/: conftest.py  test_anonymous.py  test_api.py  test_groups.py  test_handling.py  test_login_counts.py  test_prevent_url_guessing.py  test_search.py  test_select_tab.py  test_utils.py  test_welcome_page.py  utils.py
ce_ui/ui/: apps.py  serializers.py  urls.py  views.py
frontend/: README.md  app.js  app.ts  base.js  index.js
frontend/analysis/: AnalysisCard.vue  AnalysisResultsDetail.vue  AnalysisResultsList.vue  BibliographyModal.vue  CardExpandButton.vue  ContactMechanicsCard.vue  ContactMechanicsParametersModal.vue  RoughnessParametersCard.vue  SeriesCard.vue  TaskStateRow.vue  TaskStatesModal.vue  TasksButton.vue  analysis_app.js  index.js  index.ts
frontend/api/: client.gen.ts  index.ts  sdk.gen.ts  types.gen.ts
frontend/apps/: AnalysisResultsDetail.vue  AnalysisResultsList.vue  AppFrame.vue  DatasetCollection.vue  DatasetCollectionList.vue  DatasetCollectionPublish.vue  DatasetDetail.vue  DatasetList.vue  DatasetPublish.vue  Home.vue  TopographyDetail.vue  Tracing.vue  index.js  index.ts
frontend/base/: AppFrame.vue  Basket.vue  BasketButton.vue  BasketOffcanvas.vue  Breadcrumbs.vue  NotificationButton.vue  NotificationDrawer.vue  NotificationOffcanvas.vue  SelectionOffcanvas.vue  Topnav.vue  UserMenu.vue  UserMenuButton.vue  UserMenuDrawer.vue  UserMenuOffcanvas.vue  VersionInformation.vue  VersionModal.vue  topnav_app.js
frontend/components/: BokehPlot.vue  DeepZoomImage.vue  LineScanPlot.vue  ProgressIndicator.vue  SearchUserModal.vue
frontend/manager/: Attachments.vue  BandwidthPlot.vue  BasketElement.vue  DatasetDescription.vue  DatasetDetail.vue  DatasetList.vue  DatasetListRow.vue  DatasetPermissions.vue  DatasetProperties.vue  PermissionRow.vue  SearchResults.vue  SurfaceDetail.vue  SurfacePermissions.vue  SurfaceProperties.vue  Thumbnail.vue  ThumbnailRow.vue  TipTapEditor.vue  TopographyBadges.vue  TopographyCard.vue  TopographyDetail.vue  TopographyErrorCard.vue  TopographyPendingCard.vue  TopographyPropertiesCard.vue  TopographyUpdateCard.vue  TopographyUploadCard.vue  base.js  surface_detail_app.js  topography_detail_app.js
frontend/pages/: AnalysisResultsDetail.vue  AnalysisResultsList.vue  DatasetCollectionPublish.vue  DatasetDetail.vue  DatasetList.vue  DatasetPublish.vue  Home.vue  TopographyDetail.vue  index.ts
frontend/publish/: Publish.vue  PublishProgess.vue  PublishProgress.vue  PublishStage1.vue  PublishStage2.vue  PublishStage3.vue  (+5 more)
(+142 files in other folders)
