[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
dynamic = ["version"]
name = 'ce-ui'
description = 'The user-facing interface of contact.engineering.'
requires-python = ">=3.10.0"
readme = 'README.rst'
license = { file = 'LICENSE' }
authors = [
    { name = "Michael Röttger", email = "info@michael-roettger.de" },
    { name = "Lars Pastewka", email = "lars.pastewka@imtek.uni-freiburg.de" },
]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Web Environment',
    'Framework :: Django',
    'Framework :: Celery',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: POSIX',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Topic :: Internet :: WWW/HTTP',
    'Topic :: Internet :: WWW/HTTP :: Dynamic Content',
]
dependencies = [
    'django-termsandconditions>=2.0.8',
    'celery[redis]',
    'boto3',
    'argon2-cffi',
    'servestatic',
    'psycopg[binary]',
    'django-environ',
    'django-crispy-forms',
    'crispy-bootstrap5',
    'django-redis',
    'django-watchman',
    'django-request-profiler',
    'django-filter',
    'djangorestframework',
    'drf-spectacular>=0.27.2',
    'gunicorn[gevent]>=20.1.0',
    'uvicorn[standard]',
]

[project.optional-dependencies]
dev = [
    'pytest',
    'pytest-django>=4.4.0',
    # https://github.com/pytest-dev/pytest-django
    'pytest-mock',
    'pytest-cov',
    'django-celery-results',
    'factory-boy',
]

[project.urls]
homepage = 'https://contact.engineering'
repository = 'https://github.com/ContactEngineering/ce-ui'

[tool.hatch.version]
source = "vcs"
