[flake8]
max-line-length = 120
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules

[pycodestyle]
max-line-length = 120
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules

[metadata]
name = ce-ui

[options]k
include_package_data = true
packages = find:
install_requires =

[options.extras_require]
dev =

[options.entry_points]
topobank.plugins =
    ce_ui = ce_ui:TopobankPluginMeta

