[flake8]
max-line-length = 120
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules

[pycodestyle]
max-line-length = 120
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules

[metadata]
name = ce-ui

[options]k
include_package_data = true
packages = find:
install_requires =
    django

[options.extras_require]
dev =

[options.entry_points]
topobank.plugins =
    ce_ui = ce_ui.apps.CEUIPluginConfig
topobank.context_processors =
    fixed_tabs = ce_ui.context_processors.fixed_tabs_processor
    versions = topobank.context_processors.versions_processor
    basket = topobank.context_processors.basket_processor
